; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ehci-hcd.c_ehci_watchdog.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ehci-hcd.c_ehci_watchdog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ehci_hcd = type { i32, i32, i32 }

@TIMER_ASYNC_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @ehci_watchdog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ehci_watchdog(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.ehci_hcd*, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = inttoptr i64 %5 to %struct.ehci_hcd*
  store %struct.ehci_hcd* %6, %struct.ehci_hcd** %3, align 8
  %7 = load %struct.ehci_hcd*, %struct.ehci_hcd** %3, align 8
  %8 = getelementptr inbounds %struct.ehci_hcd, %struct.ehci_hcd* %7, i32 0, i32 0
  %9 = load i64, i64* %4, align 8
  %10 = call i32 @spin_lock_irqsave(i32* %8, i64 %9)
  %11 = load i32, i32* @TIMER_ASYNC_OFF, align 4
  %12 = load %struct.ehci_hcd*, %struct.ehci_hcd** %3, align 8
  %13 = getelementptr inbounds %struct.ehci_hcd, %struct.ehci_hcd* %12, i32 0, i32 2
  %14 = call i64 @test_bit(i32 %11, i32* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %1
  %17 = load %struct.ehci_hcd*, %struct.ehci_hcd** %3, align 8
  %18 = load %struct.ehci_hcd*, %struct.ehci_hcd** %3, align 8
  %19 = getelementptr inbounds %struct.ehci_hcd, %struct.ehci_hcd* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @start_unlink_async(%struct.ehci_hcd* %17, i32 %20)
  br label %22

22:                                               ; preds = %16, %1
  %23 = load %struct.ehci_hcd*, %struct.ehci_hcd** %3, align 8
  %24 = call i32 @ehci_work(%struct.ehci_hcd* %23)
  %25 = load %struct.ehci_hcd*, %struct.ehci_hcd** %3, align 8
  %26 = getelementptr inbounds %struct.ehci_hcd, %struct.ehci_hcd* %25, i32 0, i32 0
  %27 = load i64, i64* %4, align 8
  %28 = call i32 @spin_unlock_irqrestore(i32* %26, i64 %27)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @start_unlink_async(%struct.ehci_hcd*, i32) #1

declare dso_local i32 @ehci_work(%struct.ehci_hcd*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
